--- a/src/core/tsconfig.json
+++ b/src/core/tsconfig.json
@@ -1,38 +1,34 @@
 {
   "compilerOptions": {
-    "target": "es2015",
+    "target": "es5",
     "module": "commonjs",
     "declaration": false,
     "removeComments": true,
     "noLib": false,
+    "lib": ["es2016", "dom"],
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "sourceMap": true,
     "pretty": true,
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "noImplicitReturns": true,
     "noImplicitUseStrict": false,
     "noFallthroughCasesInSwitch": true,
+    "allowSyntheticDefaultImports": true,
     "typeRoots": [
       "../../node_modules/@types",
       "../../node_modules"
     ],
     "types": [
-      "express",
-      "jasmine",
       "node",
-      "protractor",
+      "jasmine",
       "systemjs"
     ]
   },
+  "compileOnSave": false,
   "exclude": [
-    "desktop",
-    "nativescript",
-    "node_modules",
-    "dist",
-    "src"
-  ],
-  "compileOnSave": false
+    "app/main-prod.ts"
+  ]
 }
