Trying to use Paris through NPM

--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
 		"definition": "definitions/index"
 	},
   "scripts": {
-	  "release": "standard-version",
-	  "postinstall": "gulp build"
+	  "release": "standard-version"
   },
   "author": "Yossi Kolesnicov",
   "license": "MIT",
