--- a/package.json
+++ b/package.json
@@ -5,19 +5,23 @@
   "repository": {
     "url": "https://github.com/microsoft/paris.ts"
   },
-	"main": "bundle/index.js",
-	"typings": "definitions/index.d.ts",
+	"main": "bundle/paris.cjs.js",
+	"module": "bundle/paris.esm.js",
+	"browser": "bundle/paris.umd.js",
+  "typings": "bundle/index.d.ts",
   "scripts": {
-	  "release": "standard-version"
+	  "build": "gulp build && rollup -c",
+	  "dev": "rollup -c -w"
   },
   "author": "Yossi Kolesnicov",
   "license": "MIT",
   "devDependencies": {
-    "@angular/compiler-cli": "^5.0.0-beta.6",
-    "@angular/platform-server": "^5.0.0-beta.6",
+    "@angular/compiler-cli": "^4.0.0",
+    "@angular/platform-server": "^4.0.0",
     "@compodoc/compodoc": "^1.0.0-beta.7",
     "@types/async": "^2.0.32",
     "@types/browser-sync": "^0.0.36",
+    "@types/es6-shim": "^0.31.32",
     "@types/express": "^4.0.33",
     "@types/gulp": "^4.0.0",
     "@types/gulp-filter": "^3.0.29",
@@ -32,27 +36,30 @@
     "@types/run-sequence": "^0.0.29",
     "@types/systemjs": "^0.20.2",
     "@types/yargs": "^8.0.2",
-    "typescript": "2.4.2",
-	  "@types/es6-shim": "^0.31.32",
-	  "gulp": "^3.9.1",
-	  "gulp-clean": "^0.3.2",
-	  "gulp-jasmine": "^2.4.2",
-	  "gulp-typescript": "^3.1.3",
-	  "merge2": "^1.0.2",
-	  "rimraf": "~2.5.4",
-	  "run-sequence": "^1.2.2",
-	  "standard-version": "^3.0.0"
+    "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-jasmine": "^2.4.2",
+    "gulp-typescript": "^3.1.3",
+    "merge2": "^1.0.2",
+    "rimraf": "~2.5.4",
+	  "rollup": "^0.50.0",
+	  "rollup-plugin-commonjs": "^8.2.4",
+	  "rollup-plugin-node-resolve": "^3.0.0",
+    "run-sequence": "^1.2.2",
+    "standard-version": "^3.0.0",
+    "typescript": "^2.4.2"
   },
   "dependencies": {
-    "@angular/animations": "^5.0.0-beta.6",
-    "@angular/common": "^5.0.0-beta.6",
-    "@angular/compiler": "^5.0.0-beta.6",
-    "@angular/core": "^5.0.0-beta.6",
-    "@angular/forms": "^5.0.0-beta.6",
-    "@angular/http": "^5.0.0-beta.6",
-    "@angular/platform-browser": "^5.0.0-beta.6",
-    "@angular/platform-browser-dynamic": "^5.0.0-beta.6",
-    "@angular/router": "^5.0.0-beta.6",
+    "@angular/animations": "^4.0.0",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "@angular/http": "^4.0.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/router": "^4.0.0",
     "@angular/service-worker": "^1.0.0-beta.16",
     "core-js": "^2.4.1",
     "intl": "^1.2.5",
