--- a/package.json
+++ b/package.json
@@ -63,8 +63,8 @@
     "@angular/service-worker": "^1.0.0-beta.16",
     "core-js": "^2.4.1",
     "intl": "^1.2.5",
-    "rxjs": "^5.4.2",
-    "systemjs": "0.20.14",
-    "zone.js": "0.8.12"
+    "rxjs": "^5.2.0",
+    "systemjs": "^0.20.12",
+    "zone.js": "^0.8.7"
   }
 }
