--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
   "author": "Yossi Kolesnicov",
   "license": "MIT",
   "devDependencies": {
-    "@angular/compiler-cli": "^4.0.0",
-    "@angular/platform-server": "^4.0.0",
+    "@angular/compiler-cli": ">=4.0.0",
+    "@angular/platform-server": ">=4.0.0",
     "@compodoc/compodoc": "^1.0.0-beta.7",
     "@types/async": "^2.0.32",
     "@types/browser-sync": "^0.0.36",
     "@types/es6-shim": "^0.31.32",
     "@types/express": "^4.0.33",
-    "@types/gulp": "^4.0.0",
+    "@types/gulp": ">=4.0.0",
     "@types/gulp-filter": "^3.0.29",
     "@types/gulp-htmlmin": "^1.3.30",
     "@types/gulp-load-plugins": "^0.0.30",
@@ -51,20 +51,20 @@
     "typescript": "^2.4.2"
   },
   "dependencies": {
-    "@angular/animations": "^4.0.0",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
+    "@angular/animations": ">=4.0.0",
+    "@angular/common": ">=4.0.0",
+    "@angular/compiler": ">=4.0.0",
+    "@angular/core": ">=4.0.0",
+    "@angular/forms": ">=4.0.0",
+    "@angular/http": ">=4.0.0",
+    "@angular/platform-browser": ">=4.0.0",
+    "@angular/platform-browser-dynamic": ">=4.0.0",
+    "@angular/router": ">=4.0.0",
     "@angular/service-worker": "^1.0.0-beta.16",
-    "core-js": "^2.4.1",
+    "core-js": ">=2.4.1",
     "intl": "^1.2.5",
-    "rxjs": "^5.2.0",
-    "systemjs": "^0.20.12",
-    "zone.js": "^0.8.7"
+    "rxjs": ">=5.2.0",
+    "systemjs": ">=0.20.12",
+    "zone.js": ">=0.8.7"
   }
 }
