Finally, managed to use Paris bundle with npm link!

--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "description": "Library for the implementation of Domain Driven Design in Angular/TypeScript apps",
   "repository": {
+	  "type": "git",
     "url": "https://github.com/microsoft/paris.ts"
   },
+	"dist": "./bundle",
 	"main": "bundle/paris.cjs.js",
 	"module": "bundle/paris.esm.js",
 	"browser": "bundle/paris.umd.js",
-  "typings": "bundle/index.d.ts",
+  "typings": "index.d.ts",
   "scripts": {
 	  "build": "gulp build && rollup -c",
 	  "dev": "rollup -c -w"
@@ -16,6 +18,16 @@
   "author": "Yossi Kolesnicov",
   "license": "MIT",
   "devDependencies": {
+	  "@angular/animations": ">=4.0.0",
+	  "@angular/common": ">=4.0.0",
+	  "@angular/compiler": ">=4.0.0",
+	  "@angular/core": ">=4.0.0",
+	  "@angular/forms": ">=4.0.0",
+	  "@angular/http": ">=4.0.0",
+	  "@angular/platform-browser": ">=4.0.0",
+	  "@angular/platform-browser-dynamic": ">=4.0.0",
+	  "@angular/router": ">=4.0.0",
+	  "@angular/service-worker": "^1.0.0-beta.16",
     "@angular/compiler-cli": ">=4.0.0",
     "@angular/platform-server": ">=4.0.0",
     "@compodoc/compodoc": "^1.0.0-beta.7",
@@ -46,21 +58,23 @@
 	  "rollup": "^0.50.0",
 	  "rollup-plugin-commonjs": "^8.2.4",
 	  "rollup-plugin-node-resolve": "^3.0.0",
-    "run-sequence": "^1.2.2",
+	  "rollup-plugin-typescript": "^0.8.1",
     "standard-version": "^3.0.0",
     "typescript": "^2.4.2"
   },
+	"peerDependencies": {
+		"@angular/animations": ">=4.0.0",
+		"@angular/common": ">=4.0.0",
+		"@angular/compiler": ">=4.0.0",
+		"@angular/core": ">=4.0.0",
+		"@angular/forms": ">=4.0.0",
+		"@angular/http": ">=4.0.0",
+		"@angular/platform-browser": ">=4.0.0",
+		"@angular/platform-browser-dynamic": ">=4.0.0",
+		"@angular/router": ">=4.0.0",
+		"@angular/service-worker": "^1.0.0-beta.16"
+	},
   "dependencies": {
-    "@angular/animations": ">=4.0.0",
-    "@angular/common": ">=4.0.0",
-    "@angular/compiler": ">=4.0.0",
-    "@angular/core": ">=4.0.0",
-    "@angular/forms": ">=4.0.0",
-    "@angular/http": ">=4.0.0",
-    "@angular/platform-browser": ">=4.0.0",
-    "@angular/platform-browser-dynamic": ">=4.0.0",
-    "@angular/router": ">=4.0.0",
-    "@angular/service-worker": "^1.0.0-beta.16",
     "core-js": ">=2.4.1",
     "intl": "^1.2.5",
     "rxjs": ">=5.2.0",
