Finally, managed to use Paris bundle with npm link!

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,8 @@
 		"noImplicitUseStrict": false,
 		"noFallthroughCasesInSwitch": true,
 		"typeRoots": [
-			"./node_modules/@types",
-			"./node_modules"
+			"../node_modules/@types",
+			"../node_modules"
 		],
 		"types" : ["node"], // only use needed types
 		"baseUrl": "/",
