--- a/package.json
+++ b/package.json
@@ -3,33 +3,33 @@
   "version": "0.1.0",
   "description": "Library for the implementation of Domain Driven Design in Angular/TypeScript apps",
   "repository": {
-	  "type": "git",
+    "type": "git",
     "url": "https://github.com/microsoft/paris.ts"
   },
-	"dist": "./bundle",
-	"main": "bundle/paris.cjs.js",
-	"module": "bundle/paris.esm.js",
-	"browser": "bundle/paris.umd.js",
+  "dist": "./bundle",
+  "main": "bundle/paris.cjs.js",
+  "module": "bundle/paris.esm.js",
+  "browser": "bundle/paris.umd.js",
   "typings": "index.d.ts",
   "scripts": {
-	  "build": "gulp build && rollup -c",
-	  "dev": "rollup -c -w"
+    "build": "gulp build && rollup -c",
+    "dev": "rollup -c -w"
   },
   "author": "Yossi Kolesnicov",
   "license": "MIT",
   "devDependencies": {
-	  "@angular/animations": ">=4.0.0",
-	  "@angular/common": ">=4.0.0",
-	  "@angular/compiler": ">=4.0.0",
-	  "@angular/core": ">=4.0.0",
-	  "@angular/forms": ">=4.0.0",
-	  "@angular/http": ">=4.0.0",
-	  "@angular/platform-browser": ">=4.0.0",
-	  "@angular/platform-browser-dynamic": ">=4.0.0",
-	  "@angular/router": ">=4.0.0",
-	  "@angular/service-worker": "^1.0.0-beta.16",
+    "@angular/animations": ">=4.0.0",
+    "@angular/common": ">=4.0.0",
+    "@angular/compiler": ">=4.0.0",
     "@angular/compiler-cli": ">=4.0.0",
+    "@angular/core": ">=4.0.0",
+    "@angular/forms": ">=4.0.0",
+    "@angular/http": ">=4.0.0",
+    "@angular/platform-browser": ">=4.0.0",
+    "@angular/platform-browser-dynamic": ">=4.0.0",
     "@angular/platform-server": ">=4.0.0",
+    "@angular/router": ">=4.0.0",
+    "@angular/service-worker": "^1.0.0-beta.16",
     "@compodoc/compodoc": "^1.0.0-beta.7",
     "@types/async": "^2.0.32",
     "@types/browser-sync": "^0.0.36",
@@ -43,42 +43,48 @@
     "@types/gulp-sass": "^0.0.30",
     "@types/gulp-util": "^3.0.29",
     "@types/jasmine": "^2.5.52",
+    "@types/lodash.get": "^4.4.3",
     "@types/node": "^8.0.25",
     "@types/rimraf": "2.0.2",
     "@types/run-sequence": "^0.0.29",
     "@types/systemjs": "^0.20.2",
     "@types/yargs": "^8.0.2",
+    "core-js": ">=2.4.1",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.1",
     "gulp-jasmine": "^2.4.2",
     "gulp-typescript": "^3.1.3",
+    "intl": "^1.2.5",
+    "lodash.get": "^4.4.2",
     "merge2": "^1.0.2",
     "rimraf": "~2.5.4",
-	  "rollup": "^0.50.0",
-	  "rollup-plugin-commonjs": "^8.2.4",
-	  "rollup-plugin-node-resolve": "^3.0.0",
-	  "rollup-plugin-typescript": "^0.8.1",
+    "rollup": "^0.50.0",
+    "rollup-plugin-commonjs": "^8.2.4",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-typescript": "^0.8.1",
+    "rxjs": ">=5.2.0",
     "standard-version": "^3.0.0",
-    "typescript": "^2.4.2"
+    "systemjs": ">=0.20.12",
+    "typescript": "^2.4.2",
+    "zone.js": ">=0.8.7"
   },
-	"peerDependencies": {
-		"@angular/animations": ">=4.0.0",
-		"@angular/common": ">=4.0.0",
-		"@angular/compiler": ">=4.0.0",
-		"@angular/core": ">=4.0.0",
-		"@angular/forms": ">=4.0.0",
-		"@angular/http": ">=4.0.0",
-		"@angular/platform-browser": ">=4.0.0",
-		"@angular/platform-browser-dynamic": ">=4.0.0",
-		"@angular/router": ">=4.0.0",
-		"@angular/service-worker": "^1.0.0-beta.16"
-	},
-  "dependencies": {
+  "peerDependencies": {
+    "@angular/animations": ">=4.0.0",
+    "@angular/common": ">=4.0.0",
+    "@angular/compiler": ">=4.0.0",
+    "@angular/core": ">=4.0.0",
+    "@angular/forms": ">=4.0.0",
+    "@angular/http": ">=4.0.0",
+    "@angular/platform-browser": ">=4.0.0",
+    "@angular/platform-browser-dynamic": ">=4.0.0",
+    "@angular/router": ">=4.0.0",
+    "@angular/service-worker": "^1.0.0-beta.16",
     "core-js": ">=2.4.1",
     "intl": "^1.2.5",
     "rxjs": ">=5.2.0",
     "systemjs": ">=0.20.12",
-    "zone.js": ">=0.8.7"
+    "zone.js": ">=0.8.7",
+    "lodash.get": ">=4.4.2"
   }
 }
