Added delete functionality in repos. Added next/previous to DataSets.

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   },
   "peerDependencies": {
     "rxjs": ">=5.2.0",
-    "lodash.get": ">=4.4.2"
+    "lodash.get": ">=4.4.2",
+    "lodash.findIndex": ">=4.4.2"
   }
 }
