--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   "peerDependencies": {
     "rxjs": ">=5.2.0",
     "lodash.get": ">=4.4.2",
-    "lodash.findIndex": ">=4.4.2"
+    "lodash.findIndex": ">=4.4.2",
+    "lodash.flatMap": ">=4.4.2"
   }
 }
