--- a/package.json
+++ b/package.json
@@ -1,66 +1,67 @@
 {
-  "name": "paris",
-  "version": "0.1.3",
-  "description": "Library for the implementation of Domain Driven Design in Angular/TypeScript apps",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/microsoft/paris.ts"
-  },
-  "dist": "./bundle",
-  "main": "bundle/paris.cjs.js",
-  "module": "bundle/paris.esm.js",
-  "browser": "bundle/paris.umd.js",
-  "typings": "index.d.ts",
-  "scripts": {
-    "build": "gulp build && rollup -c",
-    "dev": "rollup -c -w"
-  },
-  "author": "Yossi Kolesnicov",
-  "license": "MIT",
-  "devDependencies": {
-    "@compodoc/compodoc": "^1.0.0-beta.7",
-    "@types/async": "^2.0.32",
-    "@types/browser-sync": "^0.0.36",
-    "@types/es6-shim": "^0.31.32",
-    "@types/express": "^4.0.33",
-    "@types/gulp": ">=4.0.0",
-    "@types/gulp-filter": "^3.0.29",
-    "@types/gulp-htmlmin": "^1.3.30",
-    "@types/gulp-load-plugins": "^0.0.30",
-    "@types/gulp-protractor": "^1.0.30",
-    "@types/gulp-sass": "^0.0.30",
-    "@types/gulp-util": "^3.0.29",
-    "@types/jasmine": "^2.5.52",
-    "@types/lodash.get": "^4.4.3",
-    "@types/node": "^8.0.25",
-    "@types/rimraf": "2.0.2",
-    "@types/run-sequence": "^0.0.29",
-    "@types/systemjs": "^0.20.2",
-    "@types/yargs": "^8.0.2",
-    "core-js": ">=2.4.1",
-    "gulp": "^3.9.1",
-    "gulp-clean": "^0.3.2",
-    "gulp-concat": "^2.6.1",
-    "gulp-jasmine": "^2.4.2",
-    "gulp-typescript": "^3.1.3",
-    "intl": "^1.2.5",
-    "lodash.get": "^4.4.2",
-    "merge2": "^1.0.2",
-    "rimraf": "~2.5.4",
-    "rollup": "^0.50.0",
-    "rollup-plugin-commonjs": "^8.2.4",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-typescript": "^0.8.1",
-    "rxjs": ">=5.2.0",
-    "standard-version": "^3.0.0",
-    "systemjs": ">=0.20.12",
-    "typescript": "^2.4.2",
-    "zone.js": ">=0.8.7",
-    "run-sequence": "^2.2.0"
-  },
-  "peerDependencies": {
-    "rxjs": ">=5.2.0",
-    "lodash.get": ">=4.4.2",
-    "lodash.findIndex": ">=4.4.2"
-  }
+	"name": "paris",
+	"version": "0.2.0",
+	"description": "Library for the implementation of Domain Driven Design in Angular/TypeScript apps",
+	"repository": {
+		"type": "git",
+		"url": "https://microsoft.visualstudio.com/DefaultCollection/WDATP/_git/Paris"
+	},
+	"dist": "./bundle",
+	"main": "bundle/paris.cjs.js",
+	"module": "bundle/paris.esm.js",
+	"browser": "bundle/paris.umd.js",
+	"typings": "index.d.ts",
+	"scripts": {
+		"build": "gulp build && rollup -c",
+		"dev": "rollup -c -w"
+	},
+	"author": "Yossi Kolesnicov",
+	"license": "MIT",
+	"devDependencies": {
+		"@compodoc/compodoc": "^1.0.0-beta.7",
+		"@types/async": "^2.0.32",
+		"@types/browser-sync": "^0.0.36",
+		"@types/es6-shim": "^0.31.32",
+		"@types/express": "^4.0.33",
+		"@types/gulp": ">=4.0.0",
+		"@types/gulp-filter": "^3.0.29",
+		"@types/gulp-htmlmin": "^1.3.30",
+		"@types/gulp-load-plugins": "^0.0.30",
+		"@types/gulp-protractor": "^1.0.30",
+		"@types/gulp-sass": "^0.0.30",
+		"@types/gulp-util": "^3.0.29",
+		"@types/jasmine": "^2.5.52",
+		"@types/lodash.get": "^4.4.3",
+		"@types/node": "^8.0.25",
+		"@types/rimraf": "2.0.2",
+		"@types/run-sequence": "^0.0.29",
+		"@types/systemjs": "^0.20.2",
+		"@types/yargs": "^8.0.2",
+		"core-js": ">=2.4.1",
+		"gulp": "^3.9.1",
+		"gulp-clean": "^0.3.2",
+		"gulp-concat": "^2.6.1",
+		"gulp-jasmine": "^2.4.2",
+		"gulp-typescript": "^3.1.3",
+		"intl": "^1.2.5",
+		"lodash.get": "^4.4.2",
+		"merge2": "^1.0.2",
+		"rimraf": "~2.5.4",
+		"rollup": "^0.50.0",
+		"rollup-plugin-commonjs": "^8.2.4",
+		"rollup-plugin-node-resolve": "^3.0.0",
+		"rollup-plugin-typescript": "^0.8.1",
+		"rxjs": ">=5.2.0",
+		"standard-version": "^3.0.0",
+		"systemjs": ">=0.20.12",
+		"typescript": "^2.4.2",
+		"zone.js": ">=0.8.7",
+		"run-sequence": "^2.2.0"
+	},
+	"peerDependencies": {
+		"rxjs": ">=5.2.0",
+		"lodash.get": ">=4.4.2",
+		"lodash.findIndex": ">=4.4.2"
+	},
+	"dependencies": {}
 }
