Changed relationship repository to accept items and not IDs.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,9 @@
 		"paths": {
 			"@angular/*": [
 				"../node_modules/@angular/*"
+			],
+			"rxjs/*": [
+				"../node_modules/rxjs/*"
 			]
 		}
 	},
