added husky pre-push hook for docs

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 	},
 	"husky": {
 		"hooks": {
-			"pre-push": "npm docs"
+			"pre-push": "npm run docs"
 		}
 	},
 	"author": "Yossi Kolesnicov",
