--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@microsoft/paris",
-	"version": "1.0.2",
+	"version": "1.1.0",
 	"description": "Library for the implementation of Domain Driven Design in Angular/TypeScript apps",
 	"repository": {
 		"type": "git",
@@ -33,7 +33,7 @@
 		"@types/gulp-sass": "^0.0.30",
 		"@types/gulp-util": "^3.0.29",
 		"@types/jasmine": "^2.5.52",
-		"@types/lodash.get": "^4.4.3",
+		"@types/lodash-es": "4.17.1",
 		"@types/mocha": "^5.2.4",
 		"@types/node": "^8.0.25",
 		"@types/rimraf": "2.0.2",
@@ -70,10 +70,7 @@
 	},
 	"peerDependencies": {
 		"rxjs": ">=6.0.0",
-		"lodash.get": ">=4.4.2",
-		"lodash.findIndex": ">=4.4.2",
-		"lodash.clone": ">=4.4.2",
-		"lodash.flatMap": ">=4.4.2"
+		"lodash-es": "4.5.0"
 	},
 	"dependencies": {}
 }
