--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
 	"compilerOptions": {
-		"lib": ["es2016", "dom"], // we target Node.js(v6)
-		"target": "es5", // we target Node.js(v6)
+		"lib": ["es2016", "dom"],
+		"target": "es5",
 		"module": "commonjs",
-		"moduleResolution": "node", // we target Node.js(v6)
-		"declaration": true, // generate TypeScript definitions
+		"moduleResolution": "node",
+		"declaration": true,
 		"rootDir": ".",
 		"outDir": "./bundle",
 		"emitDecoratorMetadata": true,
@@ -17,7 +17,7 @@
 			"node_modules/@types",
 			"node_modules"
 		],
-		"types" : ["node"], // only use needed types
+		"types" : ["node", "lodash-es"],
 		"baseUrl": "/",
 		"paths": {
 			"@angular/*": [
