--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"build": "gulp build",
 		"dev": "rollup -c -w",
 		"prepublishOnly": "npm run build",
-		"test": "mocha -r ts-node/register lib/**/*.spec.ts",
+		"test": "mocha --opts ./test/mocha.opts",
 		"docs": "typedoc --options typedocconfig.ts"
 	},
 	"author": "Yossi Kolesnicov",
@@ -50,7 +50,7 @@
 		"gulp-typescript": "^3.1.3",
 		"husky": "^1.0.0-rc.13",
 		"intl": "^1.2.5",
-		"lodash.get": "^4.4.2",
+		"lodash-es": "4.17.10",
 		"merge2": "^1.0.2",
 		"mocha": "^5.2.0",
 		"reflect-metadata": "^0.1.12",
