--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"build": "gulp build",
 		"dev": "rollup -c -w",
 		"prepublishOnly": "npm run build",
-		"test": "mocha --opts ./test/mocha.opts",
+		"test": "jest",
+		"test:watch": "jest --watch",
 		"docs": "typedoc --options typedocconfig.ts"
 	},
 	"author": "Yossi Kolesnicov",
@@ -21,8 +22,6 @@
 		"@compodoc/compodoc": "^1.0.0-beta.7",
 		"@types/async": "^2.0.32",
 		"@types/browser-sync": "^0.0.36",
-		"@types/chai": "^4.1.4",
-		"@types/chai-spies": "^1.0.0",
 		"@types/es6-shim": "^0.31.32",
 		"@types/express": "^4.0.33",
 		"@types/gulp": ">=4.0.0",
@@ -32,27 +31,23 @@
 		"@types/gulp-protractor": "^1.0.30",
 		"@types/gulp-sass": "^0.0.30",
 		"@types/gulp-util": "^3.0.29",
-		"@types/jasmine": "^2.5.52",
+		"@types/jest": "^23.3.1",
 		"@types/lodash-es": "4.17.1",
-		"@types/mocha": "^5.2.4",
 		"@types/node": "^8.0.25",
 		"@types/rimraf": "2.0.2",
 		"@types/run-sequence": "^0.0.29",
 		"@types/systemjs": "^0.20.2",
 		"@types/yargs": "^8.0.2",
-		"chai": "^4.1.2",
-		"chai-spies": "^1.0.0",
 		"core-js": ">=2.4.1",
 		"gulp": "^3.9.1",
 		"gulp-clean": "^0.3.2",
 		"gulp-concat": "^2.6.1",
-		"gulp-jasmine": "^2.4.2",
 		"gulp-typescript": "^3.1.3",
 		"husky": "^1.0.0-rc.13",
 		"intl": "^1.2.5",
+		"jest": "^23.5.0",
 		"lodash-es": "4.17.10",
 		"merge2": "^1.0.2",
-		"mocha": "^5.2.0",
 		"reflect-metadata": "^0.1.12",
 		"rimraf": "~2.5.4",
 		"rollup": "^0.50.0",
@@ -63,6 +58,7 @@
 		"rxjs": "^6.0.0",
 		"standard-version": "^3.0.0",
 		"systemjs": ">=0.20.12",
+		"ts-jest": "^23.1.3",
 		"ts-node": "^7.0.0",
 		"typedoc": "^0.11.1",
 		"typescript": "^2.7.2",
@@ -71,6 +67,25 @@
 	"peerDependencies": {
 		"rxjs": ">=6.0.0",
 		"lodash-es": "4.5.0"
+	},
+	"jest": {
+		"transform": {
+			"^.+\\.(js|ts)$": "ts-jest"
+		},
+		"testPathIgnorePatterns": [
+			"/node_modules/"
+		],
+		"setupTestFrameworkScriptFile": "<rootDir>/jest-setup.ts",
+		"testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|js)$",
+		"moduleFileExtensions": [
+			"ts",
+			"js",
+			"json",
+			"node"
+		],
+		"transformIgnorePatterns": [
+			"<rootDir>/node_modules/(?!lodash-es)"
+		]
 	},
 	"dependencies": {}
 }
