--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -14,15 +14,10 @@
 		"noImplicitReturns": true,
 		"noImplicitUseStrict": false,
 		"noFallthroughCasesInSwitch": true,
-		"typeRoots": [
-			"node_modules/@types",
-			"node_modules"
-		],
-		"types" : ["node", "lodash-es"],
+		"typeRoots": ["node_modules/@types", "node_modules"],
+		"types": ["node", "lodash-es"],
 		"baseUrl": "/"
 	},
-	"include": [
-		"index.ts",
-		"lib/**/*"
-	]
+	"include": ["index.ts", "lib/**/*"],
+	"exclude": ["lib/**/*.spec.ts"]
 }
