Added Omer Mizrachi as contributor

--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
 			"email": "Shai.Rose@microsoft.com"
 		},
 		{
+			"name": "Omer Mizrahi",
+			"email": "Omer.Mizrahi@microsoft.com"
+		},
+		{
 			"name": "Ben Grynhaus",
 			"email": "bengr@microsoft.com"
 		}
