Simplifying ReadonlyRepository and Modeler for a better API and adding unit tests.

--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -19,5 +19,5 @@
 		"baseUrl": "/"
 	},
 	"include": ["index.ts", "lib/**/*"],
-	"exclude": ["lib/**/*.spec.ts"]
+	"exclude": ["lib/**/*.spec.ts", "lib/mock/*"]
 }
