--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 	"scripts": {
 		"build": "gulp build",
 		"dev": "rollup -c -w",
-		"prepublish": "npm run build",
+		"prepublish": "npm run build && npm run test",
 		"test": "jest",
 		"test:watch": "jest --watch",
 		"docs": "typedoc --options typedocconfig.ts"
