--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@microsoft/paris",
 	"version": "1.3.3",
-	"description": "Library for the implementation of Domain Driven Design in Angular/TypeScript apps",
+	"description": "Library for the implementation of Domain Driven Design with TypeScript + RxJS",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/Microsoft/paris"
