--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
 		"@types/gulp-protractor": "^1.0.30",
 		"@types/gulp-sass": "^0.0.30",
 		"@types/gulp-util": "^3.0.29",
-		"@types/jest": "^23.3.1",
+		"@types/jest": "^24.0.0",
 		"@types/json-stringify-safe": "^5.0.0",
 		"@types/lodash-es": "4.17.1",
 		"@types/node": "^8.0.25",
@@ -63,7 +63,7 @@
 		"gulp-typescript": "^3.1.3",
 		"husky": "^1.0.0-rc.13",
 		"intl": "^1.2.5",
-		"jest": "^23.6.0",
+		"jest": "^24.7.1",
 		"json-stringify-safe": "^5.0.1",
 		"lodash-es": "4.17.10",
 		"merge2": "^1.0.2",
@@ -77,7 +77,7 @@
 		"rxjs": "^6.0.0",
 		"standard-version": "^3.0.0",
 		"systemjs": ">=0.20.12",
-		"ts-jest": "^23.1.3",
+		"ts-jest": "^24.0.0",
 		"ts-node": "^7.0.0",
 		"typedoc": "^0.11.1",
 		"typescript": "^2.7.2",
@@ -98,8 +98,10 @@
 			"/node_modules/",
 			"/dist/"
 		],
-		"setupTestFrameworkScriptFile": "<rootDir>/jest-setup.ts",
-		"testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|js)$",
+		"setupFilesAfterEnv": [
+			"<rootDir>/jest-setup.ts"
+		],
+		"testRegex": "\\.(test|spec)\\.(ts|js)$",
 		"moduleFileExtensions": [
 			"ts",
 			"js",
