--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
 		"ts-jest": "^24.0.0",
 		"ts-node": "^7.0.0",
 		"typedoc": "^0.11.1",
-		"typescript": "^2.7.2",
+		"typescript": "3.1.8",
 		"zone.js": ">=0.8.7"
 	},
 	"peerDependencies": {
